# KNDS

./: .gitignore  CMakeLists.txt  _pybind.cpp  ant.py  brut.cpp  compile.sh  debug.sh  demo.py  gen.py  lowerbound.cpp  main.cpp  pyproject.toml  setup.py  test.in  test.out
Demo/: ant  ant-antColony.gcda  ant-main.gcda  brut  brut.out  compile.sh  debug.sh  lowerBound  lowerBound.out  run.sh  runSmall.sh  test.in  test.out
include/: antColony.h
src/: antColony.cpp
